# rust-product

./: .gitignore  Cargo.toml  README.md
functions/rust-product-get/: Cargo.toml  README.md
functions/rust-product-get/src/: main.rs
functions/rust-product-post/: Cargo.toml  README.md
functions/rust-product-post/src/: main.rs
iac/: main.tf  variables.tf
