[package]
name = "rust-product-post"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "1.2.0"
aws_lambda_events = "1.2.0"

tokio = { version = "1", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

aws-config = "1"
aws-sdk-dynamodb = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

http = "1"